<resources>
    <string name="app_name">EV Sherpa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_profile">Profile</string>

    <string name="menu_subsidy_info">Subsidy Info</string>
    <string name="menu_car_info">Car Info</string>
    <string name="menu_car_outlet">Car Outlet</string>
    <string name="menu_subsidy_status">Subsidy Status</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="sign_up">sign up</string>
    <string name="sign_up_normal">일반 회원가입</string>
    <string name="sign_up_google">Google로 로그인하기</string>
    <string name="sign_up_kakao">Kakao로 로그인하기</string>
    <string name="sign_up_confirm">Sign Up</string>

    <string name="input_email">email을 입력하세요</string>
    <string name="input_nickname">nickname을 입력하세요</string>
    <string name="input_password">password를 입력하세요</string>
    <string name="input_password_re">password를 한번 더 입력하세요</string>

    <string name="notice_email_format">email형식이 맞는지 확인해주세요</string>
    <string name="notice_password_match">password가 일치하지 않습니다</string>

    <string name="car_company_name">제조사</string>
    <string name="car_model">차량명</string>
    <string name="car_battery_type">배터리 타입</string>

    <string name="confirm">확인</string>

    <string name="preference_rank">선호조건</string>
    <string name="preference_distance">거리순</string>
    <string name="preference_fast_charge">고속충전 지원</string>
    <string name="preference_num_of_charger">충전기 댓수</string>
    <string name="preference_is_parking_lot">주차장 여부</string>
    <string name="preference_price">가격순</string>
    <string name="preference_company">선호 충전업체</string>

    <string name="ev_car_profile">전기차 정보</string>
    <string name="subsidy_status">보조금 현황</string>
    <string name="subsidy_information">보조금 정보</string>
    <string name="charge_price">충전 가격</string>
    <string name="outlet_type">충전기 종류</string>

    <string name="connector_name">충전기 종류: </string>
    <string name="charge_current">전기 전류: </string>
    <string name="charge_voltage">전기 전압: </string>
    <string name="charge_power">전기 저항: </string>
    <string name="charge_level">충전 레벨: </string>
    <string name="available_car">이용가능 차량: </string>

    <string name="division">구분</string>
    <string name="car_type">종류</string>
    <string name="car_maker">제조/수입사</string>
    <string name="car_name">차종</string>
    <string name="subsidy_amount">국고보조금</string>
    <string name="title_activity_address_page">AddressPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>