<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/outlet_profile"
            android:src="@mipmap/ic_launcher"

            />
<!--        src는 충전기 사진 구하면 변경하기-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connector_name"
                android:id="@+id/txt_connector_name"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/charge_current"
                android:id="@+id/txt_charge_current"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/charge_voltage"
                android:id="@+id/txt_charge_voltage"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/charge_power"
                android:id="@+id/txt_charge_power"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/charge_level"
                android:id="@+id/txt_charge_level"
                />

            <TextView
                android:id="@+id/txt_available_car"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="@string/available_car" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>