<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/gray_200">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNickname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/input_nickname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextNickname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextNickname"
        app:layout_constraintTop_toBottomOf="@+id/editTextNickname" />

    <EditText
        android:id="@+id/editTextPasswordRe"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/input_password_re"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/txt_email_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/notice_email_format"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/txt_password_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notice_password_match"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordRe"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRe" />

    <Button
        android:id="@+id/btn_sign_up_submit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/sky_blue_500"
        android:fontFamily="@font/electrolize"
        android:text="@string/sign_up_confirm"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />


    <!--    <TextView-->
<!--        android:id="@+id/textView6"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="100dp"-->
<!--        android:backgroundTint="@color/sky_blue_500"-->
<!--        android:gravity="center"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="50dp"-->
<!--        android:fontFamily="@font/electrolize"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:background="@drawable/bg_gis_result_items_count"-->
<!--        android:text="EV Sherpa"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->



</androidx.constraintlayout.widget.ConstraintLayout>