<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_200"
    tools:context=".CarRegistrationActivity">

    <TextView
        android:id="@+id/txt_car_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/car_company_name"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_car_company_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:entries="@array/car_company_entries"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_car_company_name"
        app:layout_constraintVertical_bias="0.014" />

    <TextView
        android:id="@+id/txt_car_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/car_model"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_car_company_name" />

    <TextView
        android:id="@+id/txt_car_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/car_battery_type"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_car_model" />

    <Button
        android:id="@+id/btn_car_registration_submit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:fontFamily="@font/electrolize"
        android:text="Submit"
        android:textAllCaps="false"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_car_battery_type" />

    <Spinner
        android:id="@+id/spinner_car_model"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:entries="@array/hyundai_model"
        app:layout_constraintEnd_toEndOf="@+id/spinner_car_company_name"
        app:layout_constraintStart_toStartOf="@+id/spinner_car_company_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_car_model" />

    <Spinner
        android:id="@+id/spinner_car_battery_type"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:entries="@array/car_battery_type"
        app:layout_constraintEnd_toEndOf="@+id/spinner_car_model"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="@+id/spinner_car_model"
        app:layout_constraintTop_toBottomOf="@+id/txt_car_battery" />

    

</androidx.constraintlayout.widget.ConstraintLayout>